# changer-migration-model

./: .gitignore  README.md  migration.ipynb  pipeline.ipynb  pyproject.toml  requirements.txt  roman.ipynb  service_types.json
changer_migration/: _constant.py  creating_map.py  model.py  planter.py  ueqi.py
utils/: _constant.py  base_model.py  creating_map.py  planter.py  ueqi.py
