[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changer-migration-model"
description = "Migration flows analysis and anchor-city tooling"
readme = "README.md"
version = "0.1.0"
authors = [{ name = "Roman Bashirov" }]
license = { text = "MIT" }
requires-python = ">=3.10, <3.11"
dependencies = [
  "townsnet==0.0.9",
  "geojson",
  "h3",
  "statsmodels",
]
keywords = ["geospatial", "migration", "flows", "urban"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# консольный скрипт: `changer-migration ...`
[project.scripts]
changer-migration = "changer_migration.pipeline:main"

[project.optional-dependencies]
dev = [
  "black>=24,<25",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "build>=1",
  "pre-commit>=3.7,<4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["changer_migration*", "utils"]

[tool.setuptools_scm]
# версия берётся из git-тегов; fallback, если нет тега:
fallback_version = "0.0.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
